Sun Jul 11 19:32:38 1999  Hanno Mueller <kontakt@hanno.de>

	* contrib/README: Add scriptname directory.

	* contrib/scriptname/*: An example of using htsearch within
	dynamic SSI pages

	* htcommon/defaults.cc: Add script_name attribute to override
	SCRIPT_NAME CGI environment variable.
	
	* htdoc/FAQ.html: Update question 4.7 based on including htsearch
	as a CGI in SSI markup.
	
	* htdoc/attrs.html, htdoc/cf_byname.html, htdoc/cf_byprog.html,
	htdoc/hts_templates.html: Update based on behavior of script_name
	attribute.

	* htsearch/Display.cc: Set SCRIPT_NAME variable to attribute
	script_name if set and CGI environment variable if undefined.

Sat Jul 10 00:22:34 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htfuzzy/Regex.cc (getWords): Anchor the match to the beginning
	of string, add regex-interpeted characters to extra_word_chars
	temporarily, and strip remaining punctuation before making a match.

Fri Jul  9 22:35:57 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htsearch/Display.cc: Back out change of June 24.
	
	* htsearch/htsearch.cc: Ditto.
	
	* htsearch/htsearch.cc (setupWords): Remove HtStripPunctuation in
	favor of requiring Fuzzy classes to strip whatever punctuation is
	necessary.

	* htfuzzy/Fuzzy.h: Add HtWordType.h to #includes and update comments.

	* htfuzzy/Synonym.cc, htfuzzy/Substring.cc, htfuzzy/Speling.cc,
	htfuzzy/Prefix.cc, htfuzzy/Exact.cc, htfuzzy/Endings.cc,
	htfuzzy/Fuzzy.cc (getWords): Call HtStripPunctuation on input before
	performing fuzzy matching.

Thu Jul  8 21:28:44 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/HTML.cc (do_tag): Add support for parsing <LINK> tags.

Mon Jul  5 16:53:23 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/htdig.cc (main): Insert '*' instead of username/password
	combination to hide credentials in process accounting.

Sat Jul  3 17:35:52 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>

	* htdig/Transport.h(ConnectionWrite): Return value from