@@ -1,3 +1,9 @@
+Mon Jul 12 22:20:40 1999  Geoff Hutchison  <ghutchis@wso.williams.edu>
+
+	* htdig/HTML.cc (do_tag): Cleanups suggested by Gilles, combining
+	<link> and <area>, <embed> <object> and <frame> and moving <img>
+	to a separate case.
+
 Sun Jul 11 19:32:38 1999  Hanno Mueller <kontakt@hanno.de>
 
 	* contrib/README: Add scriptname directory.
